syntax = "proto3";

package com.github.nlepage.grpc_hellow.service;
option go_package = "service";

service Hellow {
  rpc sayHellow(SayHellowRequest) returns (SayHellowResponse) {}
  rpc streamHellow(SayHellowRequest) returns (stream SayHellowResponse) {}
}

message SayHellowRequest {
  string name = 1;
  int64 count = 2;
}

message SayHellowResponse {
  string message = 1;
}
